--- a/compose.yaml
+++ b/compose.yaml
@@ -4,11 +4,15 @@ services:
     container_name: vaultwarden
     restart: unless-stopped
     environment:
+      ADMIN_TOKEN_FILE: /run/secrets/admin_token
       DOMAIN: "https://sub.example.com/path/"
+      SIGNUPS_ALLOWED: false
     volumes:
       - ./vw-data/:/data/
     ports:
       - 8080:80
+    secrets:
+      - admin_token
   vaultwarden_backup:
     image: bruceforce/vaultwarden-backup
     container_name: vaultwarden-backup
@@ -36,3 +40,6 @@ services:
       - UID=vaultwarden
       - GID=vaultwarden
       - TZ=Europe/Berlin
+secrets:
+  admin_token:
+    file: ./.admin_token.txt
